// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute reserves-staging endpoint should return success 1`] = `
{
  "data": {
    "result": 98765432.1,
  },
  "result": 98765432.1,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1733793826000,
  },
}
`;

exports[`execute reserves-test endpoint should return ripcord - string 1`] = `
{
  "errorMessage": "Ripcord indicator true",
  "ripcord": "True",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute reserves-test endpoint should return ripcord 1`] = `
{
  "errorMessage": "Ripcord indicator true",
  "ripcord": true,
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute reserves-test endpoint should return success - string ripcord 1`] = `
{
  "data": {
    "result": 12345678.9,
  },
  "result": 12345678.9,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1733793825000,
  },
}
`;

exports[`execute reserves-test endpoint should return success 1`] = `
{
  "data": {
    "result": 12345678.9,
  },
  "result": 12345678.9,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1733793825000,
  },
}
`;
